--- a/Languages/Russian/Keyed/HumanResources_keys.xml
+++ b/Languages/Russian/Keyed/HumanResources_keys.xml
@@ -28,13 +28,13 @@
 	<!--Settings-->
 	<TechPoolModeTitle>Получать знания из следующих списков:</TechPoolModeTitle>
 	<TechPoolModeDesc>Определяет общий список, из которого следует получать знания для ваших поселенцев при их создании.</TechPoolModeDesc>
-	<TechPoolIncludesStartingTitle>  [..] Стартовые технологии фракции</TechPoolIncludesStartingTitle>
+	<TechPoolIncludesStartingTitle> [..]  Стартовые технологии фракции</TechPoolIncludesStartingTitle>
 	<TechPoolIncludesStartingDesc>Если включено, то в список будут добавлены стандартные стартовые технологии для вашей фракции.</TechPoolIncludesStartingDesc>
-	<TechPoolIncludesTechLevelTitle>  [..] Технический  уровень фракции</TechPoolIncludesTechLevelTitle>
+	<TechPoolIncludesTechLevelTitle> [..]  Технический уровень фракции</TechPoolIncludesTechLevelTitle>
 	<TechPoolIncludesTechLevelDesc>Если включено, то в список будут добавлены все технологии технического уровня вашей фракции.</TechPoolIncludesTechLevelDesc>
-	<TechPoolIncludesBackgroundTitle>  [..] Биография персонажа</TechPoolIncludesBackgroundTitle>
+	<TechPoolIncludesBackgroundTitle> [..]  Биография персонажа</TechPoolIncludesBackgroundTitle>
 	<TechPoolIncludesBackgroundDesc>Если включено, то во внимание будут приняты биографии вновь создаваемых персонажей. Это сделает их компетенцию приближенной к их истории, однако также может привести к тому, что персонажи не вполне будут соответсовать техническому уровню своей фракции. Впрочем, это может быть забавно!</TechPoolIncludesBackgroundDesc>
-	<TechPoolIncludesScenarioTitle>  [..] Исследования, указанные в сценарии</TechPoolIncludesScenarioTitle>
+	<TechPoolIncludesScenarioTitle> [..]  Исследования, указанные в сценарии</TechPoolIncludesScenarioTitle>
 	<TechPoolIncludesScenarioDesc>Если включено, то в список будут добавлены любые технологии, добавленные в редакторе сценариев.</TechPoolIncludesScenarioDesc>
 	<TechPoolMinimumDefaultMsg>Необходимо указать хотя бы один список!</TechPoolMinimumDefaultMsg>
 	<WeaponPoolModeTitle>Боевые специалисты получают оружие из:</WeaponPoolModeTitle>
@@ -52,9 +52,9 @@
 	<RequireTrainingForSingleUseWeaponsDesc>Если включено, то оружие, такое как ракетница судного дня, также потребует, чтобы поселенец был компетентен в обращении с ним перед экипировкой.</RequireTrainingForSingleUseWeaponsDesc>
 	<EnableJoyGiverTitle>Использовать тренажёры для забавы</EnableJoyGiverTitle>
 	<EnableJoyGiverDesc>Поселенцы будут практиковаться, используя мишень для стрельбы и тренировочный манекен, чтобы просто выпустить пар.</EnableJoyGiverDesc>
-	<ResearchSpeedTiedToDifficultyTitle>Скорость исследования</ResearchSpeedTiedToDifficultyTitle>
-	<ResearchSpeedTiedToDifficultyDesc>Если включено, то скорость исследования становится зависимой от настроек сложности.\nБез изменений на низком уровне сложности и вплоть до -30% на высоком.\nЕсли выключено, скорость исследования будет снижена на 10% от значений настроек игры.</ResearchSpeedTiedToDifficultyDesc>
-	<StudySpeedTiedToDifficultyTitle>Скорость изучения технологий</StudySpeedTiedToDifficultyTitle>
+	<ResearchSpeedTiedToDifficultyTitle>Сложность => скорость исследования</ResearchSpeedTiedToDifficultyTitle>
+	<ResearchSpeedTiedToDifficultyDesc>Если включено, то скорость исследования становится зависимой от настроек сложности игры.\nБез изменений на низком уровне сложности и вплоть до -30% на высоком.\nЕсли выключено, скорость исследования фиксируется на отметке 90% от базового значения игры.</ResearchSpeedTiedToDifficultyDesc>
+	<StudySpeedTiedToDifficultyTitle>Сложность => скорость изучения</StudySpeedTiedToDifficultyTitle>
 	<StudySpeedTiedToDifficultyDesc>Если включено, то скорость изучения новых технологий становится зависимой от настроек сложности.\nНа среднем уровне сложности: -10%\nНа высоком уровне сложности: -20%</StudySpeedTiedToDifficultyDesc>
 
 	<!--Things-->
