--- a/Languages/English/Keyed/HumanResources_keys.xml
+++ b/Languages/English/Keyed/HumanResources_keys.xml
@@ -91,7 +91,7 @@
   <UnknownWeapon>Pawn has not been trained to use this weapon</UnknownWeapon>
   <EvilWeapon>Pawn cannot comprehend this weapon and is scared of it</EvilWeapon>
   <TechAlreadyKnown>{0_label} is already known.</TechAlreadyKnown>
-  <!--NEW--><NoWeaponEquipped>Invalid equipment.</NoWeaponEquipped>
+  <NoWeaponEquipped>Invalid equipment.</NoWeaponEquipped>
   
   <!--weapon testing -->
   <WeaponTestFail>{0_nameDef} couldn't figure out how {1_definite} works.</WeaponTestFail>
