--- a/Languages/ChineseTraditional/DefInjected/ThingDef/Things.xml
+++ b/Languages/ChineseTraditional/DefInjected/ThingDef/Things.xml
@@ -31,7 +31,7 @@
   <!--EN: Target Stand-->
   <Target.label>靶子</Target.label>
   <!--EN: A target for your sharpshooters to hone their skills with.-->
-  <Target.description>您的神槍手可以在此磨煉技巧。</Target.description>
+  <Target.description>您的神槍手可以在此磨鍊技巧。</Target.description>
 
   <!--EN: Training Dummy-->
   <MrDummy.label>訓練用假人</MrDummy.label>
