--- a/Languages/ChineseTraditional/Keyed/HumanResources_keys.xml
+++ b/Languages/ChineseTraditional/Keyed/HumanResources_keys.xml
@@ -16,62 +16,62 @@
   <!--EN: Show ranged weapons.-->
   <ShowRanged>顯示遠程武器</ShowRanged>
   <!--EN: Show techs available to learn.-->
-  <ShowAvailable>顯示可供學習的科技。</ShowAvailable>
+  <ShowAvailable>顯示可供學習的科技</ShowAvailable>
   <!--EN: Compact view.-->
-  <ShowCompact>小窗口</ShowCompact>
-
-  <!--NEW-->
-  <ShowAssignment>Show assignments.</ShowAssignment>
-
+  <ShowCompact>小窗視圖</ShowCompact>
+  <!--EN: Show assignments.-->
+  <ShowAssignment>顯示被分配的任務</ShowAssignment>
   <!--EN: Expand-->
   <Expand>擴展</Expand>
   <!--EN: Collapse-->
-  <Collapse>折疊</Collapse>
+  <Collapse>摺疊</Collapse>
   <!--EN: Catalog-->
   <TabCatalogue>目錄</TabCatalogue>
   <!--EN: {0} books in {1} shelves-->
   <AvailableBooksReport>{1}個書架上有{0}本書</AvailableBooksReport>
+  <!--EN: Left-click to assign for studying.-->
+  <ClickToAssignForStudying>左鍵點擊以命令該殖民者學習此科技。</ClickToAssignForStudying>
+  <!--EN: Left-click to assign for documentation.-->
+  <ClickToAssignForDocumentation>左鍵點擊以命令該殖民者撰寫此科技的技術書。</ClickToAssignForDocumentation>
+  <!--EN: Left-click to unassign.-->
+  <ClickToUnassign>左鍵點擊以取消任務分配。</ClickToUnassign>
   <!--EN: Right-click to show on Research Tree.-->
-  <RightClickToTree>右鍵點擊可顯示研究樹。</RightClickToTree>
-  
-  <!--NEW--><ClickToAssignForStudying>Left-click to assign for studying.</ClickToAssignForStudying>
-  <!--NEW--><ClickToAssignForDocumentation>Left-click to assign for documentation.</ClickToAssignForDocumentation>
-  <!--NEW--><ClickToUnassign>Left-click to unassign.</ClickToUnassign>
-  <!--NEW--><AssignedTo>{0} is tasked with:</AssignedTo>
-  <!--NEW--><AssignedToResearch>{0} is tasked with researching this.</AssignedToResearch>
-  <!--NEW--><AssignedToStudy>{0} is tasked with studying this.</AssignedToStudy>
-  <!--NEW--><AssignedToDocument>{0} is tasked with documenting this.</AssignedToDocument>
-  <!--NEW--><ClickToRemove>click to remove</ClickToRemove>
+  <RightClickToTree>右鍵點擊以在科技樹上查看此科技。</RightClickToTree>
+  <!--EN: {0} is tasked with:-->
+  <AssignedTo>{0}被分配了以下任務：</AssignedTo>
+  <!--EN: {0} is tasked with researching this.-->
+  <AssignedToResearch>{0}被下令研究此科技。</AssignedToResearch>
+  <!--EN: {0} is tasked with studying this.-->
+  <AssignedToStudy>{0}被下令學習此科技。</AssignedToStudy>
+  <!--EN: {0} is tasked with documenting this.-->
+  <AssignedToDocument>{0}被下令將撰寫該科技的技術書。</AssignedToDocument>
+  <!--EN: click to remove-->
+  <ClickToRemove>左鍵單擊以撤銷該任務</ClickToRemove>
 
-  
   <!--Settings-->
   
   <!--EN: Knowledge generation draws from...-->
-  <TechPoolModeTitle>殖民者的開局自帶科技來自…</TechPoolModeTitle>
+  <TechPoolModeTitle>殖民者的開局自帶科技來自：</TechPoolModeTitle>
   <!--EN: Defines the pool from which to draw technologies for the player's colonists when they are created.-->
-  <TechPoolModeDesc>定義玩家派系殖民者的科技池。當玩家派系的殖民者被生成時，將從中隨機抽選若幹項開局自帶科技。</TechPoolModeDesc>
-  
-  <!--NEW--><TechPoolIncludesStartingTitle>...the faction's default starting techs</TechPoolIncludesStartingTitle>
-  <!--NEW--><TechPoolIncludesStartingDesc>If checked, the knowledge pool for new colonists will include the default starting technologies for your faction.</TechPoolIncludesStartingDesc>
-  <!--NEW--><TechPoolIncludesTechLevelTitle>...the faction's tech level</TechPoolIncludesTechLevelTitle>
-  <!--NEW--><TechPoolIncludesTechLevelDesc>If checked, the knowledge pool for new colonists will include all technologies from your faction's tech level.</TechPoolIncludesTechLevelDesc>
-  <!--NEW--><TechPoolIncludesBackgroundTitle>...the pawn's background</TechPoolIncludesBackgroundTitle>
-  <!--NEW--><TechPoolIncludesBackgroundDesc>If checked, the individual pawn's backstory will be taken into consideration. This will make their expertise follow their biography more closely, but might also result in colonists out of tune with their faction's original tech level. It's fun though!</TechPoolIncludesBackgroundDesc>
-  <!--NEW--><TechPoolIncludesScenarioTitle>...the scenario starting research</TechPoolIncludesScenarioTitle>
-  <!--NEW--><TechPoolMinimumDefaultMsg>They must know something!</TechPoolMinimumDefaultMsg>
-
-  <!--OLD-->
-  <!--EN: both faction settings-->
-  <!--<TechPoolMode_Both>以下二者</TechPoolMode_Both>-->
-  <!--EN: the faction's tech level only-->
-  <!--<TechPoolMode_TechLevel>玩家派系的科技水平</TechPoolMode_TechLevel>-->
-  <!--EN: the starting techs for that faction only-->
-  <!--<TechPoolMode_Starting>玩家派系的開局科技</TechPoolMode_Starting>-->
-  <!--EN: Also include starting research parts from the scenario.-->
-  <!--<TechPoolIncludesScenarioTitle>同時包括劇本設定的開局科技</TechPoolIncludesScenarioTitle>-->
-  
+  <TechPoolModeDesc>定義玩家派系殖民者的科技池。當玩家派系的殖民者被生成時，將從中隨機抽選若干項開局自帶科技。</TechPoolModeDesc>
+  <!--EN: ...the faction's default starting techs-->
+  <TechPoolIncludesStartingTitle>玩家派系的默認初始科技</TechPoolIncludesStartingTitle>
+  <!--EN: If checked, the knowledge pool for new colonists will include the default starting technologies for your faction.-->
+  <TechPoolIncludesStartingDesc>若勾選此項，科技池將包括玩家派系的初始自帶科技。</TechPoolIncludesStartingDesc>
+  <!--EN: ...the faction's tech level-->
+  <TechPoolIncludesTechLevelTitle>玩家派系的科技層級</TechPoolIncludesTechLevelTitle>
+  <!--EN: If checked, the knowledge pool for new colonists will include all technologies from your faction's tech level.-->
+  <TechPoolIncludesTechLevelDesc>若勾選此項，科技池將包含玩家派系所在科技層級內的所有科技。</TechPoolIncludesTechLevelDesc>
+  <!--EN: ...the pawn's background-->
+  <TechPoolIncludesBackgroundTitle>殖民者的背景</TechPoolIncludesBackgroundTitle>
+  <!--EN: If checked, the individual pawn's backstory will be taken into consideration. This will make their expertise follow their biography more closely, but might also result in colonists out of tune with their faction's original tech level. It's fun though!-->
+  <TechPoolIncludesBackgroundDesc>若勾選此項，則殖民者的背景將影響殖民者的初始自帶科技。這會讓殖民者開局所擁有的技能更貼近自己的人生歷程，但也可能導致殖民者掌握與所屬派系的科技層級不相稱的知識。雖然這很有趣！</TechPoolIncludesBackgroundDesc>
+  <!--EN: ...the scenario starting research-->
+  <TechPoolIncludesScenarioTitle>劇本添加的初始科技</TechPoolIncludesScenarioTitle>
   <!--EN: If checked, any technologies you add on the scenario editor will also be included on the knowledge pool for new colonists.-->
-  <TechPoolIncludesScenarioDesc>如果選中，還將包括您在劇本編輯器中添加的開局科技。</TechPoolIncludesScenarioDesc>
+  <TechPoolIncludesScenarioDesc>若勾選此項，科技池將包含您在劇本編輯器中添加的開局科技。</TechPoolIncludesScenarioDesc>
+  <!--EN: They must know something!-->
+  <TechPoolMinimumDefaultMsg>總該知道點啥吧！</TechPoolMinimumDefaultMsg>
   <!--EN: Combat specialists start with weapons from...-->
   <WeaponPoolModeTitle>戰鬥精英殖民者的初始武器精通列表來自…</WeaponPoolModeTitle>
   <!--EN: Defines the pool from which to draw weapons proficiency for the player's colonists who are expert shooters or brawlers when they are created.-->
@@ -85,32 +85,38 @@
   <!--EN: All colonists start with scenario weapons.-->
   <FreeScenarioWeaponsTitle>所有殖民者一開始就知道如何使用劇本添加的武器。</FreeScenarioWeaponsTitle>
   <!--EN: If checked, any weapons you add on the scenario editor will also be included on the list of weapons the player's colonists can use. (The vanilla "Rich Explorer" scenario was patched to always do this, regardless of what's chosen here)-->
-  <FreeScenarioWeaponsDesc>若開啟此項，所有您在劇本編輯器里添加的武器會被自動添加至殖民者的初始武器精通列表。（原版遊戲所帶的“富有的探險家”劇本已強制開啟此選項，不受此項勾選與否影響）</FreeScenarioWeaponsDesc>
-
-  <!--NEW--><LearnMeleeWeaponsByGroupTitle>Learn melee weapons by group.</LearnMeleeWeaponsByGroupTitle>
-  <!--NEW--><LearnMeleeWeaponsByGroupDesc>When learning melee weapons, learn all weapons unlocked by that technology at the same time.</LearnMeleeWeaponsByGroupDesc>
-  <!--NEW--><LearnRangedWeaponsByGroupTitle>Learn ranged weapons by group.</LearnRangedWeaponsByGroupTitle>
-  <!--NEW--><LearnRangedWeaponsByGroupDesc>When learning ranged weapons, learn all weapons unlocked by that technology at the same time.</LearnRangedWeaponsByGroupDesc>
-  <!--NEW--><RequireTrainingForSingleUseWeaponsTitle>Require training for single-use weapons.</RequireTrainingForSingleUseWeaponsTitle>
-  <!--NEW--><RequireTrainingForSingleUseWeaponsDesc>If checked, weapons like rocket launchers will also require the pawn to be proficient with them before equipping.</RequireTrainingForSingleUseWeaponsDesc>
-  <!--NEW--><EnableJoyGiverTitle>Use training facilities for fun.</EnableJoyGiverTitle>
-  <!--NEW--><EnableJoyGiverDesc>Pawns will go practice at the target stand and training dummy just to blow off some steam.</EnableJoyGiverDesc>
-
+  <FreeScenarioWeaponsDesc>若勾選此項，所有您在劇本編輯器裏添加的武器會被自動添加至殖民者的初始武器精通列表。（原版遊戲所帶的“富有的探險家”劇本已強制開啓此選項，不受此項勾選與否影響）</FreeScenarioWeaponsDesc>
+  <!--EN: Learn melee weapons by group.-->
+  <LearnMeleeWeaponsByGroupTitle>批量學習近戰武器的使用方法</LearnMeleeWeaponsByGroupTitle>
+  <!--EN: When learning melee weapons, learn all weapons unlocked by that technology at the same time.-->
+  <LearnMeleeWeaponsByGroupDesc>學習近戰武器的使用方法時，同時解鎖同一科技下的所有近戰武器。</LearnMeleeWeaponsByGroupDesc>
+  <!--EN: Learn ranged weapons by group.-->
+  <LearnRangedWeaponsByGroupTitle>批量學習遠程武器的使用方法</LearnRangedWeaponsByGroupTitle>
+  <!--EN: When learning ranged weapons, learn all weapons unlocked by that technology at the same time.-->
+  <LearnRangedWeaponsByGroupDesc>學習遠程武器的使用方法時，同時解鎖同一科技下的所有遠程武器。</LearnRangedWeaponsByGroupDesc>
+  <!--EN: Require training for single-use weapons.-->
+  <RequireTrainingForSingleUseWeaponsTitle>一次性武器同樣需要訓練</RequireTrainingForSingleUseWeaponsTitle>
+  <!--EN: If checked, weapons like rocket launchers will also require the pawn to be proficient with them before equipping.-->
+  <RequireTrainingForSingleUseWeaponsDesc>勾選此項後，殖民者在裝備火箭發射器等一次性武器前，也需要進行訓練以熟練掌握其操作方法。</RequireTrainingForSingleUseWeaponsDesc>
+  <!--EN: Use training facilities for fun.-->
+  <EnableJoyGiverTitle>將武器訓練當成一種樂趣</EnableJoyGiverTitle>
+  <!--EN: Pawns will go practice at the target stand and training dummy just to blow off some steam.-->
+  <EnableJoyGiverDesc>殖民者會通過射擊靶子和毆打訓練用假人的方式發泄心中的怨氣。</EnableJoyGiverDesc>
   <!--EN: Difficulty settings slows down research.-->
   <ResearchSpeedTiedToDifficultyTitle>高難度會減緩研究速度。</ResearchSpeedTiedToDifficultyTitle>
   <!--EN: If checked, the base speed for research is tied to the difficulty settings, with no changes on Easy and up to 30% slower on Hard. If unchecked, it defaults to 10% slower than vanilla.-->
-  <ResearchSpeedTiedToDifficultyDesc>若開啟此項，研究速度將隨難度增加而減緩（簡單難度不變，困難難度降低30%）。不開啟此項時，一律較原版降低10%。</ResearchSpeedTiedToDifficultyDesc>
+  <ResearchSpeedTiedToDifficultyDesc>若勾選此項，研究速度將隨難度增加而減緩（簡單難度不變，困難難度降低30%）。不開啓此項時，一律較原版降低10%。</ResearchSpeedTiedToDifficultyDesc>
   <!--EN: Difficulty settings slows down tech studying.</-->
   <StudySpeedTiedToDifficultyTitle>高難度會減緩學習速度。</StudySpeedTiedToDifficultyTitle>
   <!--EN: If checked, the base speed for studying new techs is tied to the difficulty settings, dropping 10% on Medium up to 20% on hard.-->
-  <StudySpeedTiedToDifficultyDesc>若開啟此項，學習新科技的基礎速度將與難度設置相關聯（中等難度降低10％，困難難度降低20％）。</StudySpeedTiedToDifficultyDesc>
-
+  <StudySpeedTiedToDifficultyDesc>若勾選此項，學習新科技的基礎速度將與難度設置相關聯（中等難度降低10％，困難難度降低20％）。</StudySpeedTiedToDifficultyDesc>
+  
   <!--Things-->
   
   <!--EN: Empty-->
   <BookStoreEmpty>空的</BookStoreEmpty>
   <!--EN: Archived technologies: {0}/{1}-->
-  <BookStoreCapacity>歸檔科技：{0} / {1}</BookStoreCapacity>
+  <BookStoreCapacity>已歸檔科技：{0} / {1}</BookStoreCapacity>
   <!--EN: Retrieve Book-->
   <BookStoreRetrieveBook>取出書本</BookStoreRetrieveBook>
   <!--EN: Find and remove a particular book from the book shelf.-->
@@ -133,7 +139,7 @@
   <!--Feedback-->
   
   <!--EN: {0_nameDef} has learned the secrets of {1}.-->
-  <MessageStudyComplete>{0_nameDef} 已經弄懂了 {1} 的秘密。</MessageStudyComplete>
+  <MessageStudyComplete>{0_nameDef} 已經弄懂了 {1} 的祕密。</MessageStudyComplete>
   <!--EN: {0_nameDef} wrote a book on {1}.-->
   <MessageDocumentComplete>{0_nameDef} 寫了一本關於 {1} 的書。</MessageDocumentComplete>
   <!--EN: The knowledge for {0} was added to our library.-->
@@ -146,11 +152,10 @@
   <NothingToAddToLibrary>{0_nameFull}，我看你完全是不懂喔。</NothingToAddToLibrary>
   <!--EN: {0_nameDef} has read all the books.-->
   <AlreadyKnowsTheWholeLibrary>{0_nameDef} 已閱讀所有書籍。</AlreadyKnowsTheWholeLibrary>
-  
-  <!--NEW--><NoSpaceInLibrary>Nowhere to store the book when it's finished.</NoSpaceInLibrary>
-  
   <!--EN: {0_nameDef} is missing basic knowledge on those subjects.-->
   <LacksFundamentalKnowledge>{0_nameDef} 缺少這些課題的前置知識。</LacksFundamentalKnowledge>
+  <!--EN: Nowhere to store the book when it's finished.-->
+  <NoSpaceInLibrary>該書將面臨成書後沒有書架能夠容納它的窘境。</NoSpaceInLibrary>
   <!--EN: No available weapons to train.-->
   <NoWeaponsFoundToLearn>沒有可訓練的武器。</NoWeaponsFoundToLearn>
   <!--EN: {0_nameDef} has no corresponding knowledge or books to learn about {1}.-->
@@ -164,36 +169,40 @@
   <!--EN: {0_nameDef} doesn't know how to repair a {1} (requires {2}).-->
   <DoesntKnowHowToRepair>{0_nameDef} 不知如何修復 {1}（需要 {2}）。</DoesntKnowHowToRepair>
   <!--EN: {0_nameDef} doesn't know how to {1} (requires {2}).-->
-  <DoesntKnowHowToCraft>{0_nameDef} 不知如何完成「{1}」（需要 {2}）。</DoesntKnowHowToCraft>
+  <DoesntKnowHowToCraft>{0_nameDef} 不知如何完成“{1}”（需要 {2}）。</DoesntKnowHowToCraft>
   <!--EN: {0_nameDef} doesn't know how to cultivate {1} (requires {2}).-->
   <DoesntKnowThisPlant>{0_nameDef} 不知如何栽種 {1}（需要 {2}）。</DoesntKnowThisPlant>
-
-  <!--CHANGED--><!--EN: Pawn has not been trained to use this weapon-->
-  <UnknownWeapon>{0_nameDef} 尚未接受使用此武器的訓練。</UnknownWeapon>
-  <!--CHANGED--><!--EN: Pawn cannot comprehend this weapon and is scared of it-->
-  <EvilWeapon>{0_nameDef} 認為這種奇怪的武器是邪惡的，因而不會碰它。</EvilWeapon>
-  
+  <!--EN: Pawn has not been trained to use this weapon-->
+  <UnknownWeapon>該人尚未接受使用此武器的訓練。</UnknownWeapon>
+  <!--EN: Pawn cannot comprehend this weapon and is scared of it-->
+  <EvilWeapon>該人無法理解此武器，因而懼怕它。</EvilWeapon>
   <!--EN: {0} is already known.-->
   <TechAlreadyKnown>{0} 是已知的科技。</TechAlreadyKnown>
-  <!--NEW--><NoWeaponEquipped>Invalid equipment.</NoWeaponEquipped>
-
+  <!--EN: Invalid equipment.-->
+  <NoWeaponEquipped>任務分配無效。</NoWeaponEquipped>
+  
   <!--weapon testing -->
-  <!--NEW--><WeaponTestFail>{0_nameDef} couldn't figure out how {1_definite} works.</WeaponTestFail>
-  <!--NEW--><FearedWeapon>{0_nameDef} has tried these weapons before with bad results.</FearedWeapon>
-  <!--NEW--><LetterLabelWeaponTestFailed>Accident with {WEAPON}</LetterLabelWeaponTestFailed>
-  <!--NEW--><MessageWeaponTestFailureMinor>{TESTER_labelShort} has damaged {WEAPON_definite} while trying to use it ({RECIPE_label}).</MessageWeaponTestFailureMinor>
-  <!--NEW--><MessageWeaponTestFailureCatastrophic>{TESTER_labelShort} suffered an accident while trying to use {WEAPON_definite} and sustained an injury ({RECIPE_label}).</MessageWeaponTestFailureCatastrophic>
-  <!--NEW--><MessageMedicalWeaponTestFailureRidiculous>{TESTER_labelShort} totally botched it while trying to use {WEAPON_definite}. {TESTER_pronoun} is injured and the weapon, destroyed. ({RECIPE_label}).</MessageMedicalWeaponTestFailureRidiculous>
-
+  
+  <!--EN: {0_nameDef} couldn't figure out how {1_definite} works.-->
+  <WeaponTestFail>{0_nameDef} 沒能搞清 {1_definite} 的工作原理。</WeaponTestFail>
+  <!--EN: {0_nameDef} has tried these weapons before with bad results.-->
+  <FearedWeapon>{0_nameDef} 之前試用過，但沒能成功。</FearedWeapon>
+  <!--EN: Accident with {WEAPON}-->
+  <LetterLabelWeaponTestFailed>{WEAPON} 發生意外</LetterLabelWeaponTestFailed>
+  <!--EN: {TESTER_labelShort} has damaged {WEAPON_definite} while trying to use it ({RECIPE_label}).-->
+  <MessageWeaponTestFailureMinor>{TESTER_labelShort} 在嘗試使用 {WEAPON_definite} 時損壞了它（{RECIPE_label}）。</MessageWeaponTestFailureMinor> 
+  <!--EN: {TESTER_labelShort} suffered an accident while trying to use {WEAPON_definite} and sustained an injury ({RECIPE_label}).-->
+  <MessageWeaponTestFailureCatastrophic>{TESTER_labelShort} 在嘗試使用 {WEAPON_definite} 時發生意外，傷到了自己（{RECIPE_label}）。</MessageWeaponTestFailureCatastrophic>
+  <!--EN: {TESTER_labelShort} totally botched it while trying to use {WEAPON_definite}. {TESTER_pronoun} is injured and the weapon, destroyed. ({RECIPE_label}).-->
+  <MessageMedicalWeaponTestFailureRidiculous>{TESTER_labelShort} 嘗試使用 {WEAPON_definite} 的努力遭到了徹底的失敗。{TESTER_pronoun} 負了傷，武器也報廢了。（{RECIPE_label}）.</MessageMedicalWeaponTestFailureRidiculous>
+  
   <!--Go Explore-->
   
   <!--EN: The research was a success. Working together you advanced in understanding {2}.\n\nRelations with {0} have improved by {1}.-->
-  <LetterResearchRequest_SuccessHR>研究成功！通過合作，您對 {2} 的理解有所提高。\n\n與 {0} 的關系已提升了{1}。</LetterResearchRequest_SuccessHR>
+  <LetterResearchRequest_SuccessHR>研究成功！通過合作，您對 {2} 的理解有所提高。\n\n與 {0} 的關係已提升了{1}。</LetterResearchRequest_SuccessHR>
   <!--EN: The research was a great triumph! Working together you achieved a breakthrough and uncovered the secrets of {2}.\n\nRelations with {0} have improved by {1}.-->
-  <LetterResearchRequest_TriumphHR>研究取得了巨大成功！通過合作，您取得了突破，发現了 {2} 的秘密。\n\n與 {0} 的關系已提升了{1}。</LetterResearchRequest_TriumphHR>
+  <LetterResearchRequest_TriumphHR>研究取得了巨大成功！通過合作，您取得了突破，發現了 {2} 的祕密。\n\n與 {0} 的關係已提升了{1}。</LetterResearchRequest_TriumphHR>
   <!--EN: {0}, your researcher, acquired valuable expertise in {1} and gained {2} intellectual experience.-->
   <ResearchRequestXPGainHR>您的研究人員 {0} 在 {1} 上獲得了寶貴的專業知識，並獲得了{2}點智識經驗值。</ResearchRequestXPGainHR>
-
-  <!--MISSING:-->
 
 </LanguageData> 
